--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,115 @@ dmypy.json
 .pyre/
 
 .DS_Store
+data/cadastre/blg_cadvals.cpg
+data/cadastre/blg_cadvals.dbf
+data/cadastre/blg_cadvals.prj
+data/cadastre/blg_cadvals.shp
+data/cadastre/blg_cadvals.shx
+data/cadastre/cadastre.cpg
+data/cadastre/cadastre.dbf
+data/cadastre/cadastre.shp
+data/cadastre/cadastre.shx
+data/cadastre/Zurich_cadastre.cpg
+data/cadastre/Zurich_cadastre.dbf
+data/cadastre/Zurich_cadastre.prj
+data/cadastre/Zurich_cadastre.qpj
+data/cadastre/Zurich_cadastre.shp
+data/cadastre/Zurich_cadastre.shx
+data/network/Icon
+data/network/network.dbf
+data/network/network.prj
+data/network/network.qpj
+data/network/network.shp
+data/network/network.shx
+data/network/network_ND.nd/network_ND_ln_blob.nds
+data/network/network_ND.nd/network_ND_ln_blobx.nds
+data/network/network_ND.nd/network_ND_ln_desc.nds
+data/network/network_ND.nd/network_ND_ln_descx.nds
+data/network/network_ND.nd/network_ND_ln_schema.nds
+data/network/network_ND.nd/network_ND_nd_schema.nds
+data/network/network_ND_Junctions.cpg
+data/network/network_ND_Junctions.dbf
+data/network/network_ND_Junctions.prj
+data/network/network_ND_Junctions.sbn
+data/network/network_ND_Junctions.sbx
+data/network/network_ND_Junctions.shp
+data/network/network_ND_Junctions.shx
+data/tessellation/100_tessellation.cpg
+data/tessellation/100_tessellation.dbf
+data/tessellation/100_tessellation.prj
+data/tessellation/100_tessellation.shp
+data/tessellation/100_tessellation.shx
+data/tessellation/10_tessellation.cpg
+data/tessellation/10_tessellation.dbf
+data/tessellation/10_tessellation.prj
+data/tessellation/10_tessellation.shp
+data/tessellation/10_tessellation.shx
+data/tessellation/150_tessellation.cpg
+data/tessellation/150_tessellation.dbf
+data/tessellation/150_tessellation.prj
+data/tessellation/150_tessellation.shp
+data/tessellation/150_tessellation.shx
+data/tessellation/15_tessellation.cpg
+data/tessellation/15_tessellation.dbf
+data/tessellation/15_tessellation.prj
+data/tessellation/15_tessellation.shp
+data/tessellation/15_tessellation.shx
+data/tessellation/200_tessellation.cpg
+data/tessellation/200_tessellation.dbf
+data/tessellation/200_tessellation.prj
+data/tessellation/200_tessellation.shp
+data/tessellation/200_tessellation.shx
+data/tessellation/20_tessellation.cpg
+data/tessellation/20_tessellation.dbf
+data/tessellation/20_tessellation.prj
+data/tessellation/20_tessellation.shp
+data/tessellation/20_tessellation.shx
+data/tessellation/25_tessellation.cpg
+data/tessellation/25_tessellation.dbf
+data/tessellation/25_tessellation.prj
+data/tessellation/25_tessellation.shp
+data/tessellation/25_tessellation.shx
+data/tessellation/300_tessellation.cpg
+data/tessellation/300_tessellation.dbf
+data/tessellation/300_tessellation.prj
+data/tessellation/300_tessellation.shp
+data/tessellation/300_tessellation.shx
+data/tessellation/30_tessellation.cpg
+data/tessellation/30_tessellation.dbf
+data/tessellation/30_tessellation.prj
+data/tessellation/30_tessellation.shp
+data/tessellation/30_tessellation.shx
+data/tessellation/40_tessellation.cpg
+data/tessellation/40_tessellation.dbf
+data/tessellation/40_tessellation.prj
+data/tessellation/40_tessellation.shp
+data/tessellation/40_tessellation.shx
+data/tessellation/50_tessellation.cpg
+data/tessellation/50_tessellation.dbf
+data/tessellation/50_tessellation.prj
+data/tessellation/50_tessellation.shp
+data/tessellation/50_tessellation.shx
+data/tessellation/60_tessellation.cpg
+data/tessellation/60_tessellation.dbf
+data/tessellation/60_tessellation.prj
+data/tessellation/60_tessellation.shp
+data/tessellation/60_tessellation.shx
+data/tessellation/70_tessellation.cpg
+data/tessellation/70_tessellation.dbf
+data/tessellation/70_tessellation.prj
+data/tessellation/70_tessellation.shp
+data/tessellation/70_tessellation.shx
+data/tessellation/80_tessellation.cpg
+data/tessellation/80_tessellation.dbf
+data/tessellation/80_tessellation.prj
+data/tessellation/80_tessellation.shp
+data/tessellation/80_tessellation.shx
+data/tessellation/90_tessellation.cpg
+data/tessellation/90_tessellation.dbf
+data/tessellation/90_tessellation.prj
+data/tessellation/90_tessellation.shp
+data/tessellation/90_tessellation.shx
+data/zurich.gpkg
+data/network/Icon
+data/network/Icon
